--- a/installer/resources/user_data/controller/02_prerequisites.sh.j2
+++ b/installer/resources/user_data/controller/02_prerequisites.sh.j2
@@ -43,7 +43,8 @@ mkdir -p ${SOCA_HOME}
 {% if context.get("/configuration/Region") in ('us-gov-east-1', 'us-gov-west-1')  %}
   S3_BUCKET_REGION=$(curl -s --head {{ context.get("/configuration/S3Bucket") }}.s3.{{ context.get("/configuration/Region") }}.amazonaws.com | grep bucket-region | awk '{print $2}' | tr -d '\r\n')
 {% else %}
-  S3_BUCKET_REGION=$(curl -s --head {{ context.get("/configuration/S3Bucket") }}.s3.amazonaws.com | grep bucket-region | awk '{print $2}' | tr -d '\r\n')
+  S3_BUCKET_REGION=us-east-1
+  # S3_BUCKET_REGION=$(curl -s --head {{ context.get("/configuration/S3Bucket") }}.s3.amazonaws.com | grep bucket-region | awk '{print $2}' | tr -d '\r\n')
 {% endif %}
 
 # Retrieve SOCA configuration under soca.tar.gz and extract it on /opt/soca/
